# wytti

./: CLAUDE.md  Cargo.toml  README.md
examples/demo-app/: .fytti.toml  Cargo.toml  README.md  build.sh  demo.wasm
examples/demo-app/src/: main.rs
inbox/: fytti-integration.md
tests/: build_fixtures.sh
tests/fixture_src/: args.rs  hello.rs  infinite.rs
tests/fixtures/: args.wasm  exit_code.wasm  hello.wasm  infinite.wasm
wytti-cli/: Cargo.toml
wytti-cli/src/: main.rs
wytti-cli/tests/: e2e.rs
wytti-host/: Cargo.toml
wytti-host/src/: api.rs  canvas.rs  input.rs  lib.rs  linker.rs  resources.rs
wytti-manifest/: Cargo.toml
wytti-manifest/src/: lib.rs
wytti-runtime/: Cargo.toml
wytti-runtime/src/: engine.rs  error.rs  lib.rs
wytti-runtime/tests/: integration.rs
wytti-sandbox/: Cargo.toml
wytti-sandbox/src/: lib.rs  policy.rs
wytti-server/: Cargo.toml
wytti-server/src/: exec.rs  lib.rs  registry.rs  server.rs
wytti-server/tests/: integration.rs
wytti-vfs/: Cargo.toml
wytti-vfs/src/: lib.rs
