[package]
name = "wytti-cli"
description = "CLI for Wytti WASI runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "wytti"
path = "src/main.rs"

[dependencies]
wytti-runtime = { workspace = true }
wytti-vfs = { workspace = true }
wytti-sandbox = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
