[package]
name = "wytti-manifest"
description = "Fytti manifest parser for Wytti WASI runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
wytti-sandbox = { workspace = true }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
