[package]
name = "wytti-runtime"
description = "Core WASI runtime engine for Wytti"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
wytti-vfs = { workspace = true }
wytti-sandbox = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
