[package]
name = "wytti-server"
description = "HTTP API for Wytti — upload, execute, and stream WASM output"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
wytti-runtime = { workspace = true }
wytti-sandbox = { workspace = true }
wytti-manifest = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { workspace = true }
